clients/python/agentic-sandbox-client/test_podsnapshots/sandbox_router.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-router-svc
  namespace: $NAMESPACE
spec:
  type: ClusterIP
  selector:
    app: agent-sandbox-workload
  ports:
  - name: http
    protocol: TCP
    port: 8080 # The port the service will listen on
    targetPort: 8080 # The port the router container listens on (from the sandbox_router/Dockerfile)
---
# The Deployment to manage and run the router pods.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-router-deployment
  namespace: $NAMESPACE
spec:
  replicas: 1 # Run at least two replicas for high availability
  selector:
    matchLabels:
      app: agent-sandbox-workload
  template:
    metadata:
      labels:
        app: agent-sandbox-workload
    spec:
      runtimeClassName: gvisor
      tolerations:
      - key: "sandbox.gke.io/runtime"
        operator: "Equal"
        value: "gvisor"
        effect: "NoSchedule"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: sandbox-router
      containers:
      - name: router
        image: us-central1-docker.pkg.dev/k8s-staging-images/agent-sandbox/sandbox-router:v20251124-v0.1.0-10-ge26ddb2
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
